# module-control

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.csv
module-control-main/: main.py  robust_test.py
module_control_pkg/: __init__.py  controllability.py  dominating_set.py  network_metrics.py  utils.py  visualize.py
results/: test_controllability.csv  test_dominating_sets.txt  test_edges.csv  test_metrics.csv
tests/: test_functions.py
